Bug #44176 --> in order to have a progress dialog for helper apps, we reset the notifications. http wasn't regenerating the proxied notifciation calls. r=gagan